# giveaway_bot

./: .env.example  .gitignore  Dockerfile  ac6529e10c6e_add_default_settings.py  alembic.ini  d4195a40d7b9_add_default.py  docker-compose.yml  justfile  pyproject.toml  replace_template.py
alembic/: env.py
alembic/versions/: 4dc5633d30fa_add_subscription_markers.py  4e2da6a5831a_add_giveaway_model.py  64389e32de89_add_default_dialog.py  8f7a3728efd6_initial.py  d539580d3829_init.py  f0bd4e9fe6e6_addlogs_table.py
configs/: config.toml.example  example.config.toml
requirements/: pre.txt
src/giveaway_bot/: config.py
src/giveaway_bot/application/dtos/: giveaway.py  user.py
src/giveaway_bot/application/exceptions/: subscription.py
src/giveaway_bot/application/interfaces/: clock.py  provider.py  subscription.py
src/giveaway_bot/application/policies/: user.py
src/giveaway_bot/application/services/: giveaway.py  subcription.py
src/giveaway_bot/common/: utils.py
src/giveaway_bot/entities/domain/: giveaway.py  media.py  user.py
src/giveaway_bot/entities/enum/: media.py  role.py  user_action.py
src/giveaway_bot/entrypoint/: api.py  bot.py
src/giveaway_bot/infrastructure/: clock.py  media_storage.py
src/giveaway_bot/infrastructure/aiogram/: idp.py  subscription.py
src/giveaway_bot/infrastructure/database/: uow.py
src/giveaway_bot/infrastructure/localization/: translator.py
src/giveaway_bot/presentation/api/: run.py
src/template/: config.py
src/template/common/: logging.py
src/template/entities/enum/: role.py  (+1 more)
src/template/entrypoint/: bot.py
(+104 files in other folders)
